# keiry

./: Dockerfile  README.md  docker-compose.yml
keiry/: package.json  vite.config.ts
keiry/src/: App.vue  main.ts  router.ts  styles.css
keiry/src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
keiry/src-tauri/migrations/2023-08-06-171757_create_journals/: down.sql  up.sql
keiry/src-tauri/src/: schema.rs
keiry/src/pages/: BudgetManagement.vue  FinancePlan.vue  History.vue  Journal.vue  Statement.vue  TrialBalance.vue
